[package]
name = "old-reddit-fmt-bot"
version = "0.1.0"
authors = ["Eric Culp <eculperic@gmail.com>"]
edition = "2018"
license = "AGPL3"
readme = "README.md"

[dependencies]
comrak = "0.6"
failure = "0.1"
git-version = "0.3"
htmlescape = "0.3"
lazy_static = "1.3"
log = "0.4"
orca = {version = "0.7", git="https://github.com/singron/orca", branch="fork"}
#orca = {version = "0.7", path="../orca"}
rand = "0.7"
regex = "1.2"
simple_logger = "1.0"
